Create chat functionality for client

--- a/views/mail-verification.ejs
+++ b/views/mail-verification.ejs
@@ -1,11 +1,9 @@
-<%
-    if(message){
-        %>
-        <h1><%= message %></h1>
-        <%
-    }
-%>
-<!-- 
+<% if(message){ %>
+    <h1>
+        <%= message %>
+    </h1>
+    <% } %>
+        <!-- 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -57,4 +55,5 @@
         <a href="http://localhost:3000/login" class="btn">Go to Login</a>
     </div>
 </body> -->
-</html>
+
+        <!-- </html> -->
